# android_doomflame

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/doomflame/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/flamenative/: .gitignore  Cargo.toml
app/src/main/flamenative/assets_compile/: Cargo.toml
app/src/main/flamenative/assets_compile/src/: file.rs  main.rs
app/src/main/flamenative/assets_compile/src/shaders/: types.rs
app/src/main/flamenative/shader_sources/: flame.comp  flame.frag_  flame.vert_
app/src/main/flamenative/src/: doom_flame.rs  doom_flame_wgpu.rs  doom_flame_wgpu2.rs  jni_main.rs
app/src/main/java/com/example/doomflame/: DoomFlameActivity.kt  MainActivity.kt  ModeSelectActivity.kt
app/src/main/java/com/example/doomflame/doom_flame/: DoomFlameCompute.kt  DoomFlameComputeCPU.kt  DoomFlameComputeNDK.kt  (+1 more)
app/src/main/res/drawable/: ripple_r4_on_primary.xml  shape_contrast_circle.xml
app/src/main/res/layout/: activity_icon_select.xml  activity_mode_select.xml  activity_recolorable.xml  activity_theme_change.xml  item_icon_select.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round_special.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: color_inv.xml  colors.xml  colors_day.xml  ids.xml  strings.xml  themes.xml  themes_buttons.xml  themes_recolorable.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/test/java/com/example/doomflame/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+16 files in other folders)
